src/main/java/org/example/nanobananaprobot/errors/InvalidCredentialsException.java
package org.example.nanobananaprobot.errors;

public class InvalidCredentialsException extends RuntimeException {
    public InvalidCredentialsException(String message) {
        super(message);
    }
}
